BTWCT-5039-test-mobile-view-sticky-menu-ui-on-sku-page-menu-alignment-is-distorted Simple fix to Hide the List price class "cmp-sku-details__list-price" when the sticky header is displayed

--- a/waters-aem-frontend/src/styles/skudetails.scss
+++ b/waters-aem-frontend/src/styles/skudetails.scss
@@ -307,10 +307,14 @@
                 width: 100%;
             }
 
+            .cmp-sku-details__list-price {
+                display: none;
+            }
+          
             .cmp-sku-details__buyinfo {
                 padding: 0;
                 margin-top: 0;
-                }
+            }
             
         }
 
